google translate menu overflow fix

--- a/css/custom/google-translate.css
+++ b/css/custom/google-translate.css
@@ -1,3 +1,7 @@
+html[ml-stage] .sl-sugg-button-container {
+  --ml-main-scrollbar-size: 0px;
+}
+
 html[ml-stage]:not([ml-mode="filter"]) header > div:nth-of-type(2),
 html[ml-stage]:not([ml-mode="filter"]) .jfk-button {
     transition-property: none !important;
